<resources>
    <string name="app_name">MyNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_here">пишите сюда</string>
    <string name="settings">setting</string>
    <string name="main">main</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="back">back</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="send">send</string>
    <string name="photo">photo</string>
    <string name="delete">delete</string>
    <string name = "navigation_drawer_open" >Open navigation drawer</string >
    <string name = "navigation_drawer_close" >Close navigation drawer</string >
    <string name="info">About application</string>
    <string name="avatar">Igor Samogarov</string>
    <string name="change">change</string>
    <string name="clear">clear</string>
</resources>