<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id = "@+id/action_photo"
        android:icon="@android:drawable/ic_menu_camera"
        android:orderInCategory = "100"
        android:title = "@string/photo"
        app:showAsAction = "ifRoom" />
    <item
        android:id = "@+id/action_send"
        android:icon = "@android:drawable/ic_menu_send"
        android:orderInCategory = "10"
        android:title = "@string/send"
        app:showAsAction = "ifRoom" />
    <item
        android:id = "@+id/action_favorite"
        android:icon = "@android:drawable/btn_star_big_on"
        android:orderInCategory = "20"
        android:title = "@string/favorite"
        app:showAsAction = "ifRoom" />
    <item
        android:id = "@+id/action_search"
        android:icon = "@android:drawable/ic_menu_search"
        android:orderInCategory = "5"
        android:title = "@string/search"
        app:actionViewClass = "androidx.appcompat.widget.SearchView"
        app:showAsAction = "always" />
    <item
        android:id = "@+id/action_add"
        android:icon = "@android:drawable/ic_menu_add"
        android:orderInCategory = "6"
        android:title = "@string/add"
        app:showAsAction = "ifRoom" />
    <item
        android:id = "@+id/action_back"
        android:orderInCategory = "1"
        android:title = "@string/back"
        app:showAsAction = "always" />
</menu>